# cppflake

./: CMakeLists.txt  flake.nix  main.cpp
nix/: hello-world.nix
